[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendma-remote"
version = "0.7.0"
description = "OpenDMA REST client to access OpenDMA repositories via REST"
readme = "README.md"
# license = {text = ""}
dependencies = [
    "opendma-api>=0.7.0",
    "pydantic>=2.6,<3.0.0",
    "requests>=2,<3",
    "python-dateutil>=2.8.2"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["opendma.remote"]

[tool.setuptools.package-data]
"opendma.remote" = ["*"]